added About Us page

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,21 @@
     src: url(/fonts/Berthold-akzidenz-grotesk-be-medium.woff) format("woff");
     font-weight: 500;
   }
+  @font-face {
+    font-family: Inter;
+    src: url(/fonts/Inter-Bold.woff2) format("woff");
+    font-weight: 700;
+  }
+  @font-face {
+    font-family: Inter;
+    src: url(/fonts/Inter-medium.woff2) format("woff");
+    font-weight: 500;
+  }
+  @font-face {
+    font-family: Inter;
+    src: url(/fonts/Inter-Inter.woff2) format("woff");
+    font-weight: 400;
+  }
   body {
     background-color: #212121;
   }
