--- a/new-website/src/layouts/Layout.astro
+++ b/new-website/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Header from '../components/Header.astro'
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,6 +12,7 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<Header />
 		<slot />
 	</body>
 </html>
