--- a/new-website/src/pages/index.astro
+++ b/new-website/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Layout from '../layouts/Layout.astro';
 import FirstBlock from '../components/home/FirstBlock.astro';
 import '../index.css';
+import WorkStages from '../react/components/WorkStages';
 
 ---
 
 <Layout>
 	<FirstBlock />
+	<WorkStages />
 </Layout>
