feat: added second home block

--- a/new-website/src/pages/index.astro
+++ b/new-website/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from '../layouts/Layout.astro';
 import FirstBlock from '../components/home/FirstBlock.astro';
 import '../index.css';
 import WorkStages from '../react/components/WorkStages';
+import SecondBlock from '../components/home/SecondBlock.astro';
 
 ---
 
 <Layout>
 	<FirstBlock />
+	<SecondBlock />
 	<WorkStages />
 </Layout>
