--- a/new-website/src/pages/index.astro
+++ b/new-website/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
+import '../index.css';
 import Layout from '../layouts/Layout.astro';
 import FirstBlock from '../components/home/FirstBlock.astro';
-import '../index.css';
 import WorkStages from '../react/components/WorkStages';
 import SecondBlock from '../components/home/SecondBlock.astro';
+import ClientsBlock from '../components/home/ClientsBlock.astro';
 
 ---
 
@@ -11,4 +12,5 @@ import SecondBlock from '../components/home/SecondBlock.astro';
 	<FirstBlock />
 	<SecondBlock />
 	<WorkStages />
+	<ClientsBlock />
 </Layout>
