--- a/new-website/src/components/home/SecondBlock.astro
+++ b/new-website/src/components/home/SecondBlock.astro
@@ -34,8 +34,8 @@ const Expertises = [
 
 <div class="py-24 md:py-32 px-4 md:px-20 bg-white">
 	<div class="">
-		<h2 class="text-6xl md:text-6xl-tablet text-title">For success that’s ready to scale</h2>
-		<div class="text-lg md:text-lg-tablet mt-4 mb-12 text-body">We are an experienced team of software designers and engineers that know how to take ideas from concept to reality.</div>
+		<h2 class="text-6xl md:text-6xl-desktop text-title">For success that’s ready to scale</h2>
+		<div class="text-lg md:text-lg-desktop mt-4 mb-12 text-body">We are an experienced team of software designers and engineers that know how to take ideas from concept to reality.</div>
 	</div>
 	<div class="flex flex-col md:flex-row flex-wrap md:gap-x-[5%]">
 		{
@@ -47,7 +47,7 @@ const Expertises = [
 						/>
 					</div>
 					<div class="-mt-20 relative">
-						<h6 class="mb-4 text-title text-3xl md:text-3xl-tablet">{expertise.title}</h6>
+						<h6 class="mb-4 text-title text-3xl md:text-3xl-desktop">{expertise.title}</h6>
 						<span class="text-body text-lg md:text-lg-desktop">{expertise.subtitle}</span>
 					</div>
 				</div>
