--- a/new-website/src/components/home/ClientsBlock.astro
+++ b/new-website/src/components/home/ClientsBlock.astro
@@ -1,9 +1,41 @@
 ---
 import spotlightBgImage from '~/assets/images/new/spotlight-bg.png';
-import privoLaptopImage from '~/assets/images/new/laptops/privo-2x.png';
+import privoLaptopImage from '~/assets/images/new/devices/privo-2x.png';
 import privoLogoImage from '~/assets/images/new/logos/privo-white.png';
+import vierallyLaptopImage from '~/assets/images/new/devices/vierally-desktop.png';
+import vierallyMobileImage from '~/assets/images/new/devices/vierally-mobile.png';
+import vierallyMobile2xImage from '~/assets/images/new/devices/vierally-mobile-2x.png';
+import vierallyLogoImage from '~/assets/images/new/logos/vierally-logo.png';
+import plumcheckLaptopImage from '~/assets/images/new/devices/plumcheck-desktop.png';
+import plumcheckMobileImage from '~/assets/images/new/devices/plumcheck-mobile.png';
+import plumcheckLogoImage from '~/assets/images/new/logos/plumcheck-logo.png';
 import Client from '../clients/Client.astro';
 
+const Clients = [
+	{
+		desktopImg: privoLaptopImage,
+		logoImg: privoLogoImage,
+		description: "Children’s online identity & consent management",
+		name: "Privo",
+		classes: 'bg-[#005A88]',
+	},
+	{
+		desktopImg: vierallyLaptopImage,
+		logoImg: vierallyLogoImage,
+		mobileImg: { default: vierallyMobileImage, x2: vierallyMobile2xImage },
+		description: "AI tool to predict virality and maximize marketing ROI",
+		name: "VieRally",
+		classes: 'bg-[#1E3A8A]',
+	},
+	{
+		desktopImg: plumcheckLaptopImage,
+		logoImg: plumcheckLogoImage,
+		mobileImg: { default: plumcheckMobileImage },
+		description: "Allow dating and social media app users to share verified ID and health information",
+		name: "PlumCheck",
+		classes: 'bg-[#40169C]',
+	}
+]
 ---
 
 <div class='py-24 md:py-32 px-4 md:px-20 relative'>
@@ -12,11 +44,15 @@ import Client from '../clients/Client.astro';
 		<h2 class="text-6xl md:text-6xl-desktop text-white">For clients turned partners</h2>
 		<div class="text-lg md:text-lg-desktop mt-4 mb-12 text-white">Dive into our inspiring case studies that beautifully illustrate our creative solutions and the wonderful partnerships we've built with clients from diverse fields.</div>
 	</div>
-	<Client desktopImg={privoLaptopImage} logoImg={privoLogoImage}
-		description="Children’s online identity & consent management"
-		name="Privo"
-		classes='bg-[#005A88]'
-	/>
+	<div class="flex flex-col gap-5 md:gap-20">
+		{
+			Clients.map(client => (
+				<Client
+					{...client}
+				/>
+			))
+		}
+	</div>
 </div>
 
 <style>
