--- a/new-website/src/components/clients/Client.astro
+++ b/new-website/src/components/clients/Client.astro
@@ -7,28 +7,11 @@ const { name, description, logoImg, caseLink, desktopImg, mobileImg, classes } =
 
 <div
   class:list={[
-    'md:pt-20 md:pb-16 py-8 px-6 md:px-16 relative h-[600px] overflow-hidden rounded-xl',
+    'px-6 md:px-16 relative md:h-[600px] overflow-hidden rounded-xl',
     classes,
   ]}
 >
-  <img
-    src={desktopImg.src}
-    class="absolute z-10 bottom-[-30px] left-[40%] max-h-[584px]"
-  />
-  {
-    mobileImg && (
-      <img
-        src={mobileImg.default.src}
-        srcset={
-          mobileImg.x2
-            ? `${mobileImg.default.src} 1x, ${mobileImg.x2.src} 2x`
-            : undefined
-        }
-        class="absolute z-20 bottom-[-30px] right-0 max-h-[632px]"
-      />
-    )
-  }
-  <div class="relative w-[40%] flex flex-col gap-6">
+  <div class="relative md:w-[40%] flex flex-col gap-6 md:pt-20 md:pb-16 py-8">
     <img src={logoImg.src} width={logoImg.width} height={logoImg.height} />
     <div class="text-3xl md:text-3xl-desktop text-white">{description}</div>
     <a
@@ -38,6 +21,27 @@ const { name, description, logoImg, caseLink, desktopImg, mobileImg, classes } =
         class="inline-block ml-2.5 w-5 h-5 md:w-7 md:h-7"
       /></a
     >
+  </div>
+  <div
+    class="relative -mx-12 sm:-ml-18 sm:-mr-12 md:mx-0 md:absolute md:inset-0"
+  >
+    <img
+      src={desktopImg.default.src}
+      class="desktop-img md:absolute z-10 md:bottom-0 w-full md:w-[60%] md:left-[40%]"
+    />
+    {
+      mobileImg && (
+        <img
+          src={mobileImg.default.src}
+          srcset={
+            mobileImg.x2
+              ? `${mobileImg.default.src} 1x, ${mobileImg.x2.src} 2x`
+              : undefined
+          }
+          class="absolute z-20 bottom-0 right-0 h-[110%] md:h-[65%] lg:h-[80%] xl:h-full"
+        />
+      )
+    }
   </div>
 </div>
 
