--- a/new-website/src/pages/index.astro
+++ b/new-website/src/pages/index.astro
@@ -5,6 +5,7 @@ import FirstBlock from '../components/home/FirstBlock.astro';
 import WorkStages from '../react/components/WorkStages';
 import SecondBlock from '../components/home/SecondBlock.astro';
 import ClientsBlock from '../components/home/ClientsBlock.astro';
+import CaseStudies from '../components/home/CaseStudies.astro';
 ---
 
 <Layout>
@@ -12,4 +13,5 @@ import ClientsBlock from '../components/home/ClientsBlock.astro';
   <SecondBlock />
   <WorkStages />
   <ClientsBlock />
+  <CaseStudies />
 </Layout>
