--- a/new-website/src/components/home/ClientsBlock.astro
+++ b/new-website/src/components/home/ClientsBlock.astro
@@ -49,7 +49,7 @@ const Clients: ClientProps[] = [
 ];
 ---
 
-<div class="py-24 md:py-32 px-4 md:px-8 xl:px-20 relative">
+<div class="pt-24 md:pt-32 px-4 md:px-8 xl:px-20 relative">
   <img src={spotlightBgImage.src} class="absolute top-0 w-full left-0 z-0" />
   <div class="relative z-10 mb-16 md:mb-20">
     <h2 class="text-6xl md:text-6xl-desktop text-white">
