--- a/new-website/src/index.css
+++ b/new-website/src/index.css
@@ -35,6 +35,10 @@
     font-family: Inter, Akzidenz-Grotesk, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     background-color: theme(colors.surface.DEFAULT);
   }
+
+  * {
+    outline-color: rgb(0, 95, 204);
+  }
 }
 
 @layer components {
@@ -52,5 +56,21 @@
   .case-studies-link {
     border-radius: var(--rounded-3xl, 24px) var(--rounded-3xl, 24px) var(--rounded-none, 0px) var(--rounded-none, 0px);
     background: linear-gradient(180deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.00) 100%);
+  }
+
+  .contact-us-form {
+    border-radius: var(--rounded-none, 0px) var(--rounded-none, 0px) var(--rounded-3xl, 24px) var(--rounded-3xl, 24px);
+    background: linear-gradient(180deg, #020617 1.04%, #0F172A 95.8%);
+
+    /* shadow-5-strong */
+    box-shadow: 0px 2px 25px -5px var(--alpha-always-dark-15, rgba(15, 23, 42, 0.15)), 0px 25px 21px -5px var(--alpha-always-dark-10, rgba(15, 23, 42, 0.10));
+  }
+
+  .contact-us-form-desktop {
+    border-radius: var(--rounded-none, 0px) var(--rounded-3xl, 24px) var(--rounded-3xl, 24px) var(--rounded-none, 0px);
+    background: linear-gradient(90deg, #020617 0%, #0F172A 100%);
+
+    /* shadow-5-strong */
+    box-shadow: 0px 2px 25px -5px var(--alpha-always-dark-15, rgba(15, 23, 42, 0.15)), 0px 25px 21px -5px var(--alpha-always-dark-10, rgba(15, 23, 42, 0.10));
   }
 }
