--- a/new-website/src/layouts/Layout.astro
+++ b/new-website/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 ---
 
@@ -14,6 +15,7 @@ import Header from '../components/Header.astro';
   <body>
     <Header />
     <slot />
+    <Footer />
   </body>
 </html>
 
