--- a/new-website/src/components/home/ClientsBlock.astro
+++ b/new-website/src/components/home/ClientsBlock.astro
@@ -13,7 +13,7 @@ import {
   PlumcheckStack,
   PrivoStack,
   VieRallyStack,
-} from '../../constants/clientsStack.astro';
+} from '~/constants/clientsStack.astro';
 import Client from '../clients/Client.astro';
 import type { Props as ClientProps } from '../clients/Client.astro';
 
@@ -55,7 +55,7 @@ const Clients: ClientProps[] = [
     <h2 class="text-6xl md:text-6xl-desktop text-white">
       For clients turned partners
     </h2>
-    <div class="text-lg md:text-lg-desktop mt-4 mb-12 text-white">
+    <div class="text-lg md:text-lg-desktop mt-4 mb-12 text-white opacity-80">
       Dive into our inspiring case studies that beautifully illustrate our
       creative solutions and the wonderful partnerships we've built with clients
       from diverse fields.
