--- a/new-website/src/components/home/FirstBlock.astro
+++ b/new-website/src/components/home/FirstBlock.astro
@@ -9,7 +9,7 @@ import Button from '../Button.astro';
     <h2 class="text-7xl md:text-7xl-desktop text-white">
       We build software, the Swift way
     </h2>
-    <div class="text-xl md:text-xl-desktop mt-4 mb-12 text-white">
+    <div class="text-xl md:text-xl-desktop mt-4 mb-12 text-white opacity-80">
       We are an experienced team of software designers and engineers that know
       how to take ideas from concept to reality.
     </div>
