--- a/new-website/src/components/home/SecondBlock.astro
+++ b/new-website/src/components/home/SecondBlock.astro
@@ -41,9 +41,10 @@ const Expertises = [
     <h2 class="text-6xl md:text-6xl-desktop text-title">
       For success that’s ready to scale
     </h2>
-    <div class="text-lg md:text-lg-desktop mt-4 mb-12 text-body">
-      We are an experienced team of software designers and engineers that know
-      how to take ideas from concept to reality.
+    <div class="text-lg md:text-lg-desktop mt-4 mb-12 text-body opacity-80">
+      We assist startups and businesses in developing innovative products and
+      services. We offer expertise in strategy, design, iOS, Android, web apps,
+      and infrastructure development.
     </div>
   </div>
   <div class="flex flex-col md:flex-row flex-wrap md:gap-x-[5%]">
@@ -62,7 +63,7 @@ const Expertises = [
             <h6 class="mb-4 text-title text-3xl md:text-3xl-desktop">
               {expertise.title}
             </h6>
-            <span class="text-body text-lg md:text-lg-desktop">
+            <span class="text-body text-lg md:text-lg-desktop opacity-80">
               {expertise.subtitle}
             </span>
           </div>
